--- a/src/BlazorUIDesigner/Pages/_Host.cshtml
+++ b/src/BlazorUIDesigner/Pages/_Host.cshtml
@@ -14,6 +14,15 @@
     <link href="BlazorUIDesigner.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+
+    @* Favicon *@
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#133258">
+    <meta name="msapplication-TileColor" content="#133258">
+    <meta name="theme-color" content="#133258">
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
