Add CustomElements to render blazor componenents from a string.

--- a/src/BlazorUIDesigner/Pages/Index.razor
+++ b/src/BlazorUIDesigner/Pages/Index.razor
@@ -1,3 +1,8 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+@((MarkupString)buttonMarkup)
+
+@code
+{
+    string buttonMarkup = """<dx-button text="Custom Element Button"/>""";
+}
