Configure using class extensions.

--- a/src/BlazorUIDesigner/Pages/Index.razor
+++ b/src/BlazorUIDesigner/Pages/Index.razor
@@ -2,6 +2,8 @@
 
 @((MarkupString)buttonMarkup)
 
+<dx-text-box/>
+
 @code
 {
     string buttonMarkup = """<dx-button text="Custom Element Button"/>""";
