--- a/src/BlazorUIDesigner/_Imports.razor
+++ b/src/BlazorUIDesigner/_Imports.razor
@@ -7,5 +7,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using BlazorUIDesigner
+@using BlazorUIDesigner.Components
 @using BlazorUIDesigner.Shared
 @using DevExpress.Blazor
