--- a/src/BlazorUIDesigner/Components/ItemEditorPanel.razor
+++ b/src/BlazorUIDesigner/Components/ItemEditorPanel.razor
@@ -4,7 +4,7 @@
 
 <style>
     .item-editor-panel {
-        width: 350px;
+        min-width: 350px;
         height: 100%;
         background-color: var(--bg-secondary);
         border: 1px solid #e5e7eb;
