--- a/src/BlazorUIDesigner/Components/LayoutEditor.razor
+++ b/src/BlazorUIDesigner/Components/LayoutEditor.razor
@@ -1,5 +1,7 @@
 ﻿<div class="layout-editor">
-
+    <div class="resizeable-panel">
+        <p>Temporary contents of the panel to show how resizing works. This text should overflow.</p>
+    </div>
 </div>
 
 <style>
@@ -7,5 +9,17 @@
         flex-grow: 1;
         height: 100%;
         background-color: var(--bg-primary);
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .resizeable-panel {
+        resize: both;
+        overflow: hidden;
+        border: 2px solid black;
+        width: 90%;
+        height: 80%;
     }
 </style>
